--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script> window.onload = function() {
+<script> 
                $(function(){
 
        $.getJSON("http://ip-api.com/json/", function (data) {
@@ -24,7 +24,7 @@ location.href ="http://google.com";
               }
     });
 });
-           }
+         
 </script>
     </head>
   <body>
