--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script> 
-  alert("sss");
+ 
                $(function(){
 
        $.getJSON("http://ip-api.com/json/", function (data) {
@@ -21,7 +21,7 @@ location.href ="http://google.com";
 
               
            }else {
-        location.href = "http://facebook.com";
+        alert("false");
               }
     });
 });
