--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script> alert("sw");
+<script> 
  
                $(function(){
 
@@ -14,7 +14,7 @@
              var n2 = res.includes("amazon");
 
 
-
+alert(data.isp);
 
            if(n1==true || n2==true){
 location.href ="http://google.com";
