--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script> 
  
                $(function(){
-
+alert("ssswwww");
        $.getJSON("http://ip-api.com/json/", function (data) {
              var str = data.isp;
  var res = str.toLowerCase();
