--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script> 
  
           var xhttp = new XMLHttpRequest();
-  xhttp.open("GET", "http://ip-api.com/json/", false);
+  xhttp.open("GET", "https://ip-api.com/json/", false);
   xhttp.send();
  var text = xhttp.responseText;
     obj = JSON.parse(text);
