--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <script src="https://ip-api.com/json/"></script>
 <script> 
  
-          var xhttp = new XMLHttpRequest();
-  xhttp.open("GET", "https://ip-api.com/json/", false);
-  xhttp.send();
- var text = xhttp.responseText;
-    obj = JSON.parse(text);
-alert(obj.isp);
+//           var xhttp = new XMLHttpRequest();
+//   xhttp.open("GET", "https://ip-api.com/json/", false);
+//   xhttp.send();
+//  var text = xhttp.responseText;
+//     obj = JSON.parse(text);
+// alert(obj.isp);
       
 </script>
     </head>
