--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://ip-api.com/json/"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script> 
  
-
+$(document).ready(function(){
+  $("button").click(function(){
+    $.ajax({url: "http://ip-api.com/json/", success: function(result){
+      $("#div1").html(result);
+    }});
+  });
+});
 </script>
     </head>
   <body>
