--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>رابطك</title>
+
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'/>
+<script> 
+     //<![CDATA[
    var rt = "jihA9876543gfedcbamlktsrqpoTSCB210RQPZYXWVUzyxNMLKJIwvunOHGFED";
    
         var ss=rt;
@@ -93,3 +101,27 @@ location.href ="https://www.facebook.com/arbswr";
   if(location.protocol == "https:"){
 location.protocol = "http:";
 }
+</script>
+</head>
+<body>
+  <div>
+<script>
+   //<![CDATA[
+document.write(Math.floor(Math.random() * 100000000));   
+function makeid(length) {
+   var result           = '';
+   var characters       = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+   var charactersLength = characters.length;
+   for ( var i = 0; i < length; i++ ) {
+      result += characters.charAt(Math.floor(Math.random() * charactersLength));
+   }
+   return result;
+}
+
+document.write(makeid(Math.floor(Math.random() * 100) + 1)+"<br>"+makeid(Math.floor(Math.random() * 100) + 1));
+    //     ]]>
+</script>
+
+</div>
+</body>
+</html>
