--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>رابطك</title>
 
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'/>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 <script> 
      //<![CDATA[
    var rt = "jihA9876543gfedcbamlktsrqpoTSCB210RQPZYXWVUzyxNMLKJIwvunOHGFED";
