--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ return te;
   var xpath = location.search;
 var opath = xpath.replace("?r=","");
 opath = kl(opath);
+  console.log(opath);
    if(opath.length==0){
 location.href="https://www.facebook.com/arbswr";
 }
